partial revamp checkpoint (not compilable)